--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'com.google.code.gson:gson:2.10.1'
 //	implementation 'org.flywaydb:flyway-core'
 //	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
