--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,9 @@ logging:
   level:
     com.templates.springapiserverasync: TRACE
   file:
-    max-history: 3
-    max-size: 1MB
     name: logs/application.log
-  pattern:
-    rolling-file-name: ${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
+  logback:
+    rollingpolicy:
+      max-history: 3
+      max-file-size: 1MB
+      file-name-pattern: ${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
