--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,17 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'com.google.code.gson:gson:2.10.1'
-//	implementation 'org.flywaydb:flyway-core'
-//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+  implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'org.flywaydb:flyway-core'
+  implementation 'org.flywaydb:flyway-mysql'
+  implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  implementation 'mysql:mysql-connector-java:8.0.32'
 }
 
 spotless {
