--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '3.0.5'
+  id 'org.springframework.boot' version '2.7.11'
   id 'io.spring.dependency-management' version '1.1.0'
   id 'com.diffplug.spotless' version '6.11.0'
 }
@@ -22,6 +22,7 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-aop'
+  implementation 'io.springfox:springfox-boot-starter:3.0.0'
   implementation 'com.google.code.gson:gson:2.10.1'
   implementation 'org.flywaydb:flyway-core'
   implementation 'org.flywaydb:flyway-mysql'
