--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,19 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   datasource:
     url: jdbc:mysql://localhost:3306/order_master?useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: template123!
-  flyway:
+
+  flyway: # flyway Configuration - https://flywaydb.org/documentation/configuration/parameters/
     url: jdbc:mysql://localhost:3306?useSSL=false&allowPublicKeyRetrieval=true
-    schemas: order_master
+    schemas: order_master # 사용할 스키마, 없을 경우, 생성한다.
     user: root
     password: template123!
-    out-of-order: true
+    out-of-order: true # migration이 순서 상관 없이 실행될 수 있다.
   output:
     ansi:
       enabled: always
