--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
+  web:
+    resources:
+      add-mappings: false
   mvc:
+    throw-exception-if-no-handler-found: true # for 404 error exception
     pathmatch:
       matching-strategy: ant_path_matcher
 
@@ -15,6 +19,7 @@ spring:
     user: root
     password: template123!
     out-of-order: true # migration이 순서 상관 없이 실행될 수 있다.
+
   output:
     ansi:
       enabled: always
@@ -30,6 +35,9 @@ server:
   port: 9001
   version: 0.0.1
   formatted-version: v0.0.1
+  error:
+    whitelabel:
+      enabled: false # true 인 경우에는 /error 로 redirect 됨
 
 logging:
   level:
@@ -38,8 +46,9 @@ logging:
     name: logs/application.log
   logback:
     rollingpolicy:
-      max-history: 3
-      max-file-size: 1MB
+      max-history: 3 # 파일 최대 저장 개수
+      max-file-size: 1MB # 파일 크기
       file-name-pattern: ${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
   pattern:
     rolling-file-name: ${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
+
